--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,11 @@
     {
       "src": "newswebsite/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      "config": { 
+        "maxLambdaSize": "15mb", 
+        "runtime": "python3.9",
+        "installCommand": "pip install -r requirements.txt"
+      }
     },
     {
       "src": "build_files.sh",
